Update navigation links and enhance card styles for improved user experience

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <img src="img/intel-header-logo.svg" alt="Intel Logo" class="nav-logo" />
       <!-- Unordered list for navigation links -->
       <ul class="navbar">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Articles</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="https://www.intel.com/content/www/us/en/homepage.html">Home</a></li>
+        <li><a href="https://newsroom.intel.com/">Articles</a></li>
+        <li><a href="https://www.intel.com/content/www/us/en/support/contact-us.html">Contact</a></li>
       </ul>
     </div>
   </nav>
